--- a/style.css
+++ b/style.css
@@ -5,6 +5,19 @@
     margin: 0px;
 }
 
+.play_button
+{
+    width: 130px;
+    font-size: 25px;
+}
+
+
+canvas
+{
+    border: 5px solid white;
+    border-radius: 20px;
+}
+
 .note 
 {
     font-size: 15px;
